[package]
name = "billion-record-challenge"
version = "0.0.1"
edition = "2021"

[dependencies]
rand = "0.9.0-alpha.1"
rand_distr = "0.5.0-alpha.1"
clap = { version = "4.5.4", features = ["derive"] }

[[bin]]
name = "create-measurements"
path = "src/rust/create-measurements.rs"

[[bin]]
name = "billion-record-challenge"
path = "src/rust/billion-record-challenge.rs"
